load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

package(default_visibility = ["//visibility:public"])

rollup_bundle(
    name = "arcgis_core_WebMap",
    entry_point = "@npm//:node_modules/@arcgis/core/WebMap.js",
    format = "umd",
    config_file = "rollup.config.js",
    deps = [
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@arcgis/core",
    ]
)
