load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "arcgis_umd_modules",
    srcs = [
        # do not sort
        ":arcgis_bundle.js",
        ":arcgis-core-umd.js",
    ],
)

rollup_bundle(
    name = "arcgis_bundle",
    entry_point = "arcgis-core-bundle.js",
    format = "umd",
    config_file = "rollup.config.js",
    rollup_bin = "@npm//rollup2/bin:rollup",
    deps = [
        "@npm//@arcgis/core",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
    ]
)
