load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//tools:defaults.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

js_binary(
    name = "package-info",
    data = [
        ":sources",
        "//:package.json",
        "//:pnpm-workspace.yaml",
    ],
    entry_point = ":bazel-bin.ts",
)

ts_project(
    name = "sources",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//tools:tsconfig",
)
